@@ -1,0 +1,7 @@
+<component name="ProjectDictionaryState">
+  <dictionary name="liuwei">
+    <words>
+      <w>werkzeug</w>
+    </words>
+  </dictionary>
+</component>
