@@ -5,4 +5,6 @@ python:
 install: 
   - pip install tox
   - tox
-script: nosetests
+script: 
+  - pip install werkzeug
+  - py.test
